--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "author": "Alex Mouton <thomas.mouton@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "babel src  --out-file dist/index.js",
-    "prepare": "babel src --out-file dist/index.js"
+    "build": "babel src -d dist -s",
+    "prepare": "babel src -d dist -s"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
