--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,20 @@
 {
+  "plugins": ["transform-object-rest-spread"],
   "presets": [
     [ "env", {
         "useBuiltIns": true,
-        "include": []
+        "modules": false,
+        "targets": {
+          "browsers": ["last 2 versions"]
+        }
       }
     ]
   ],
-  "plugins": ["transform-object-rest-spread"]
+  "env": {
+    "commonjs": {
+      "plugins": [
+        ["transform-es2015-modules-commonjs", { "loose": true }]
+      ]
+    }
+  }
 }
