--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,22 @@
+es
+lib
+dist
+package-lock.json
+yarn.lock
+.watchmanconfig
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Dependency directories
 node_modules
-yarn-error.log
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+.DS_Store
