--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-diet",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "Simple Redux Reducer Patterns",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -15,8 +15,7 @@
   "scripts": {
     "build": "npm run build:commonjs && npm run build:es",
     "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib",
-    "build:es": "cross-env BABEL_ENV=es babel src --out-dir es",
-    "prepare": "babel src -d dist -s"
+    "build:es": "cross-env BABEL_ENV=es babel src --out-dir es"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
